--- a/src/index.css
+++ b/src/index.css
@@ -38,9 +38,14 @@
     font-size: 62.5%;
 }
 
+/* Root */
+#root {
+    height: 100%;
+}
+
 /* HTML and Body */
 html, body {
-    height: 100vh;
+    height: 100%;
 }
 
 /* List */
