--- a/src/components/Button/Primary/Primary.css
+++ b/src/components/Button/Primary/Primary.css
@@ -1,7 +1,7 @@
 /* Primary Button component styles */
 .button.primary {
     border-radius: 8px;
-    padding: 1.4rem;
+    padding: 1.6rem 2.4rem;
     transition: background-color var(--color-transition-duration);
 }
 
