--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -2,39 +2,39 @@
 .input-container {
     display: grid;
     grid-template-columns: 1fr auto;
-    grid-template-rows: repeat(2, auto);
-    align-items: start;
-    justify-content: start;
+    grid-template-rows: 1fr auto;
+    align-items: center;
+    justify-content: center;
     gap: 0.6rem;
     width: 100%;
 }
 
-/* Label component styles */
-.label {
-    padding: 0 1.4rem;
-    grid-column: 1/-1;
-    grid-row: 1/2;
-}
-
 /* Input wrapper styles */
 .input-wrapper {
-    padding: 1rem 1.4rem;
+    padding: 1rem var(--input--horizontal-padding);
     grid-column: 1/-1;
-    grid-row: 2/-1;
+    grid-row: 1/2;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 1fr auto;
-    grid-template-rows: 1fr;
-    gap: 0.8rem;
+    grid-template-rows: 1fr auto;
+    align-items: center;
+    gap: 0.4rem;
     border-radius: 8px;
     transition: outline var(--color-transition-duration);
     outline: 0.2rem solid transparent;
 }
 
+/* Input Label component styles */
+.input__label {
+    grid-column: 1/-1;
+    grid-row: 1/2;
+}
+
 /* Input component styles */
 .input {
     grid-column: 1/2;
-    grid-row: 1/-1;
+    grid-row: 2/-1;
     border: none;
     outline: none;
     width: 100%;
@@ -45,9 +45,24 @@
     outline: 0.2rem solid var(--color-primary);
 }
 
+/* Error message styles */
+.error-message {
+    height: 1em;
+    grid-column: 1/-1;
+    grid-row: 2/-1;
+    text-align: end;
+    padding: 0 var(--input--horizontal-padding);
+    opacity: 0;
+    transition: opacity var(--color-transition-duration);
+}
+
+.error-message--active {
+    opacity: 1;
+}
+
 @media (prefers-color-scheme: light) {
     .input-wrapper,
-    .input{
+    .input {
         background-color: var(--color-light-grey);
         color: var(--color-dark-grey);
     }
@@ -55,7 +70,7 @@
 
 @media (prefers-color-scheme: dark) {
     .input-wrapper,
-    .input{
+    .input {
         background-color: var(--color-dark-grey);
         color: var(--color-light-grey);
     }
