--- a/src/index.css
+++ b/src/index.css
@@ -85,13 +85,22 @@ body {
     font-size: 1.4rem;
     font-weight: 600;
     text-transform: uppercase;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
 }
 
 /* Error text */
 .error-text {
     font-size: 1.4rem;
     font-weight: 500;
+    text-transform: uppercase;
+}
+
+.title,
+.subtitle,
+.text,
+.label-text,
+.error-text {
+     letter-spacing: 1px;
 }
 
 /* Dark Mode */
