--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,7 +2,7 @@
 .button {
     border: none;
     cursor: pointer;
-    transition: border-color var(--color-transition-duration), transform var(--transform-transition-duration);
+    transition: border-color var(--color-transition-duration),;
     font-family: inherit;
     display: flex;
     align-items: center;
