--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -22,7 +22,7 @@
     gap: 0.4rem;
     border-radius: 8px;
     transition: outline var(--color-transition-duration);
-    outline: 0.2rem solid transparent;
+    outline: var(--outline-width) solid transparent;
 }
 
 /* Input Label component styles */
@@ -42,7 +42,7 @@
 
 .input-wrapper:has(.input:focus),
 .input-wrapper:has(.input:focus-visible) {
-    outline: 0.2rem solid var(--color-primary);
+    outline: var(--outline-width) solid var(--color-primary);
 }
 
 /* Error message styles */
