test: snapshot of the implementation of notifications (part II)

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,9 +2,9 @@
 .button {
     border: none;
     cursor: pointer;
+    pointer-events: auto;
     transition: border-color var(--color-transition-duration),;
     font-family: inherit;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    place-items: center;
 }
