--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,5 +1,5 @@
-/* Input container styles */
-.input-container {
+/* Input main container styles */
+.input-main-container {
     display: grid;
     grid-template-columns: 1fr auto;
     grid-template-rows: 1fr auto;
@@ -9,8 +9,8 @@
     width: 100%;
 }
 
-/* Input wrapper styles */
-.input-wrapper {
+/* Input container styles */
+.input-container {
     padding: 1rem var(--input--horizontal-padding);
     grid-column: 1/-1;
     grid-row: 1/2;
@@ -33,6 +33,9 @@
 
 /* Input component styles */
 .input {
+    font-size: var(--text--font-size);
+    font-weight: var(--text--font-weight);
+    letter-spacing: var(--letter-spacing);
     grid-column: 1/2;
     grid-row: 2/-1;
     border: none;
@@ -40,13 +43,18 @@
     width: 100%;
 }
 
-.input-wrapper:has(.input:focus),
-.input-wrapper:has(.input:focus-visible) {
+.input-container:has(.input:focus),
+.input-container:has(.input:focus-visible) {
     outline: var(--outline-width) solid var(--color-primary);
 }
 
-/* Error message styles */
-.error-message {
+/* Input error container styles */
+.input-error-container {
+    font-size: var(--small-text--font-size);
+    font-weight: var(--small-text--font-weight);
+    text-transform: uppercase;
+    color: var(--color-error);
+    letter-spacing: var(--letter-spacing);
     height: 1em;
     grid-column: 1/-1;
     grid-row: 2/-1;
@@ -56,22 +64,12 @@
     transition: opacity var(--color-transition-duration);
 }
 
-.error-message--active {
+.input-error-container--active {
     opacity: 1;
 }
 
-@media (prefers-color-scheme: light) {
-    .input-wrapper,
-    .input {
-        background-color: var(--color-light-grey);
-        color: var(--color-dark-grey);
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    .input-wrapper,
-    .input {
-        background-color: var(--color-dark-grey);
-        color: var(--color-light-grey);
-    }
+.input-container,
+.input {
+    background-color: var(--text--background-color);
+    color: var(--text--color);
 }
