--- a/src/components/Link/Link.css
+++ b/src/components/Link/Link.css
@@ -1,20 +1,20 @@
 /* Link component styles */
-.link,
-.link:visited {
+.link.link,
+.link.link:visited {
     text-decoration: inherit;
 }
 
 /* Light Mode */
 @media (prefers-color-scheme: light) {
-    .link {
+    .link.link {
         color: var(--color-secondary);
     }
 
-    .link:visited {
+    .link.link:visited {
         color: var(--color-primary);
     }
 
-    .link:hover {
+    .link.link:hover {
         color: var(--color-primary);
         transition: color var(--color-transition-duration);
     }
@@ -22,15 +22,15 @@
 
 /* Dark Mode */
 @media (prefers-color-scheme: dark) {
-    .link {
+    .link.link {
         color: var(--color-primary);
     }
 
-    .link:visited {
+    .link.link:visited {
         color: var(--color-secondary);
     }
 
-    .link:hover {
+    .link.link:hover {
         color: var(--color-secondary);
         transition: color var(--color-transition-duration);
     }
