--- a/src/components/Notification/Notification.css
+++ b/src/components/Notification/Notification.css
@@ -2,14 +2,24 @@
 .notification {
     position: absolute;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto 1fr;
     place-items: center;
-    gap: 1.4rem 2.8rem;
+    gap: 1.4rem;
     width: 100%;
     padding: 1.4rem 2.8rem;
     border-radius: 0.4rem;
     box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.1);
-    font-size: 1.4rem;
-    font-weight: 500;
     text-align: center;
 }
+
+.notification__close-container {
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+}
+
+.notification__close-button {}
