--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,18 @@
     --animation-move-duration: 0.5s;
     --input--horizontal-padding: 1.4rem;
     --outline-width: 0.2rem;
+    --icon-size: 2rem;
+    --icon-weight: 500;
+    --graphic-size: 4rem;
+    --title--font-size: 4.2rem;
+    --title--font-weight: 800;
+    --subtitle--font-size: 3rem;
+    --subtitle--font-weight: 700;
+    --text--font-size: 1.6rem;
+    --text--font-weight: 500;
+    --small-text--font-size: 1.4rem;
+    --small-text--font-weight: 500;
+    --letter-spacing: 1px;
 }
 
 /* Global Styles */
@@ -58,72 +70,13 @@ li {
     list-style-type: none;
 }
 
-/* Title */
-.title {
-    font-size: 4.2rem;
-    font-weight: 800;
-}
-
-/* Subtitle */
-.subtitle {
-    font-size: 3rem;
-    font-weight: 700;
-}
-
-/* Text */
-.text {
-    font-size: 1.6rem;
-    font-weight: 500;
-}
-
-/* Label text */
-.label-text {
-    font-size: 1.4rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-
-/* Error text */
-.error-text {
-    font-size: 1.4rem;
-    font-weight: 500;
-    text-transform: uppercase;
-}
-
-.title,
-.subtitle,
-.text,
-.label-text,
-.error-text {
-    letter-spacing: 1px;
-}
-
 /* Dark Mode */
 @media (prefers-color-scheme: dark) {
     :root {
         --background-color: var(--color-darker-grey);
         --color: var(--color-lighter-grey);
-    }
-
-    .title {
-        color: var(--color-light-grey);
-    }
-
-    .subtitle {
-        color: var(--color-light-grey);
-    }
-
-    .error-text {
-        color: var(--color-error);
-    }
-
-    .text {
-        color: var(--color-light-grey);
-    }
-
-    .label-text {
-        color: var(--color-light-grey);
+        --text--color: var(--color-light-grey);
+        --text--background-color: var(--color-dark-grey);
     }
 }
 
@@ -132,21 +85,7 @@ li {
     :root {
         --background-color: var(--color-lighter-grey);
         --color: var(--color-darker-grey);
-    }
-
-    .subtitle {
-        color: var(--color-medium-grey);
-    }
-
-    .error-text {
-        color: var(--color-error);
-    }
-
-    .text {
-        color: var(--color-medium-grey);
-    }
-
-    .label-text {
-        color: var(--color-medium-grey);
+        --text--color: var(--color-dark-grey);
+        --text--background-color: var(--color-light-grey);
     }
 }
