test: snapshot of the implementation of notifications (part III)

--- a/src/components/FadeOut/FadeOut.css
+++ b/src/components/FadeOut/FadeOut.css
@@ -1,5 +1,7 @@
 /* Fade Out component styles */
 .fade-out {
+    display: grid;
+    place-items: center;
     opacity: 1;
     transition: opacity var(--opacity-transition-duration) ease-in-out;
 }
