--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
     --color-light-grey: #ced4da;
     --color-lighter-grey: #f8f9fa;
     --color-error: #f03e3e;
+    --color-dark-error:#c92a2a;
     --color-transition-duration: 0.25s;
     --scale-transition-duration: 0.25s;
     --opacity-transition-duration: 0.25s;
