--- a/src/components/Notification/Notification.css
+++ b/src/components/Notification/Notification.css
@@ -1,25 +1,53 @@
-/* Notification component styles */
-.notification {
-    position: absolute;
-    display: grid;
-    grid-template-columns: auto 1fr;
-    grid-template-rows: auto 1fr;
-    place-items: center;
-    gap: 1.4rem;
-    width: 100%;
-    padding: 1.4rem 2.8rem;
-    border-radius: 0.4rem;
-    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-.notification__close-container {
+/* Notification container styles */
+.notification-container {
     grid-column: 1/-1;
-    grid-row: 1/2;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    grid-row: 1/-1;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: 1fr;
+    place-items: center;
+    padding: 0.6rem 0.8rem;
+    gap: 0 0.4rem;
+    width: 100%;
+    max-width: 30rem;
+    border-radius: 4px;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.1);
+    background-color: transparent;
+    text-align: center;
+    backdrop-filter: blur(2px);
+}
+
+.notification-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.3;
+    border-radius: inherit;
+}
+
+/* Notification close container styles */
+.notification__close-container {
+    grid-column: 2/-1;
+    grid-row: 1/-1;
+    align-self: start;
+    display: grid;
+    place-items: center;
     width: 100%;
 }
 
-.notification__close-button {}
+/* Notification close button styles */
+.notification__close-button {
+    pointer-events: auto;
+}
+
+/* Notification content styles */
+.notification__content {
+    grid-column: 1/2;
+    grid-row: 1/-1;
+    display: grid;
+    place-items: center;
+    width: 100%;
+}
