--- a/src/layouts/App/App.css
+++ b/src/layouts/App/App.css
@@ -2,7 +2,7 @@
 .app-container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 1fr;
     place-items: center;
     height: 100%;
     background-color: var(--background-color);
@@ -10,17 +10,26 @@
 }
 
 /* Notifications container styles */
-.notifications-container {
+.notifications-container--relative {
+    --notifications-container-max-width: 30rem;
+
     rotate: 180deg;
     justify-self: end;
-    grid-row: 2/-1;
+    align-self: end;
+    grid-row: 1/-1;
     grid-column: 1/-1;
-    padding: 3rem;
-    height: 100%;
     pointer-events: none;
+    position: relative;
+    margin: 3rem;
+    width: 100%;
+    max-width: var(--notifications-container-max-width);
 }
 
-.notifications-container div:not(:last-child) .notification-container {
+.notifications-container--absolute {
+    position: absolute;
+}
+
+.notifications-container--absolute div:not(:last-child) .notification-container {
     margin-bottom: 1rem;
 }
 
