--- a/src/components/Input/Password/Password.css
+++ b/src/components/Input/Password/Password.css
@@ -1,5 +1,5 @@
-/* Password component styles */
-.toggle {
+/* Password input component styles */
+.input__main-container__input-container__button {
     grid-column: 2/-1;
     grid-row: 1/-1;
     justify-self: center;
