--- a/src/components/Label/Label.css
+++ b/src/components/Label/Label.css
@@ -1,12 +1,9 @@
 /* Label component styles */
-.label {
+.label__container__label {
     display: block;
-}
-
-.label__text {
-    font-size: var(--small-text--font-size);
-    font-weight: var(--small-text--font-weight);
+    font-size: var(--text--label--font-size);
+    font-weight: var(--text--label--font-weight);
+    letter-spacing: var(--text--label--letter-spacing);
     color: var(--text--color);
     text-transform: uppercase;
-    letter-spacing: 2px;
 }
