--- a/src/components/Logo/Graphic/Graphic.css
+++ b/src/components/Logo/Graphic/Graphic.css
@@ -1,4 +1,13 @@
 /* Graphic component styles */
-.graphic__svg {
+.logo--graphic__container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    place-items: center;
+}
+
+.logo--graphic__svg {
+    grid-row: 1 / -1;
+    grid-column: 1 / -1;
     height: var(--graphic-size);
 }
