--- a/src/components/Button/Transparent/Transparent.css
+++ b/src/components/Button/Transparent/Transparent.css
@@ -1,4 +1,4 @@
-/* Transparent Button component styles */
+/* Transparent button component styles */
 .button--transparent {
     background-color: transparent;
 }
