--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -6,3 +6,9 @@
     gap: 1rem 2.8rem;
     width: 100%;
 }
+
+/* Submit button styles */
+.form__submit-button {
+    grid-column: 1/-1;
+    margin-top: 1rem;
+}
