--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,5 +1,5 @@
 /* Input main container styles */
-.input-main-container {
+.input__main-container {
     display: grid;
     grid-template-columns: 1fr auto;
     grid-template-rows: 1fr auto;
@@ -10,7 +10,7 @@
 }
 
 /* Input container styles */
-.input-container {
+.input__main-container__input-container {
     padding: 1rem var(--input--horizontal-padding);
     grid-column: 1/-1;
     grid-row: 1/2;
@@ -25,17 +25,18 @@
     outline: var(--outline-width) solid transparent;
 }
 
-/* Input Label component styles */
-.input__label {
+/* Input label component styles */
+.input__main-container__input-container__label {
     grid-column: 1/-1;
     grid-row: 1/2;
 }
 
 /* Input component styles */
-.input {
-    font-size: var(--text--font-size);
-    font-weight: var(--text--font-weight);
-    letter-spacing: var(--letter-spacing);
+.input__main-container__input-container__input {
+    font-size: var(--text--input--font-size);
+    font-weight: var(--text--input--font-weight);
+    letter-spacing: var(--text--input--letter-spacing);
+    font-family: var(--font-family), sans-serif;
     grid-column: 1/2;
     grid-row: 2/-1;
     border: none;
@@ -43,18 +44,18 @@
     width: 100%;
 }
 
-.input-container:has(.input:focus),
-.input-container:has(.input:focus-visible) {
+.input__main-container__input-container:has(.input:focus),
+.input__main-container__input-container:has(.input:focus-visible) {
     outline: var(--outline-width) solid var(--color-primary);
 }
 
 /* Input error container styles */
-.input-error-container {
-    font-size: var(--small-text--font-size);
-    font-weight: var(--small-text--font-weight);
+.input__main-container__error-container {
+    font-size: var(--text--small--font-size);
+    font-weight: var(--text--small--font-weight);
+    letter-spacing: var(--text--small--letter-spacing);
     text-transform: uppercase;
     color: var(--color-error);
-    letter-spacing: var(--letter-spacing);
     height: 1em;
     grid-column: 1/-1;
     grid-row: 2/-1;
@@ -64,12 +65,12 @@
     transition: opacity var(--color-transition-duration);
 }
 
-.input-error-container--active {
+.input__main-container__error-container--active {
     opacity: 1;
 }
 
-.input-container,
-.input {
+.input__main-container__input-container,
+.input__main-container__input-container__input {
     background-color: var(--text--background-color);
     color: var(--text--color);
 }
