--- a/src/components/Notification/Error/Error.css
+++ b/src/components/Notification/Error/Error.css
@@ -1,14 +1,9 @@
-/* Notification container styles */
-.notification-container::before {
-    background-color: var(--color-dark-error);
-}
-
-/* Notification text styles */
-.notification--error {
+/* Notification main container styles */
+.notification__main-container--error {
     outline: var(--outline-width) solid var(--color-error);
 }
 
 /* Notification close button styles */
-.notification__close-button {
+.notification__main-container--error .notification__main-container__close-container .notification__main-container__close-container__button .icon {
     color: var(--color-error);
 }
