--- a/src/components/Notification/Error/Text/Text.css
+++ b/src/components/Notification/Error/Text/Text.css
@@ -1,8 +1,5 @@
 /* Notification error text styles */
-.notification--error__text.notification--error__text {
-    font-size: var(--small-text--font-size);
-    font-weight: var(--small-text--font-weight);
-    letter-spacing: var(--letter-spacing);
+.text--small.notification__main-container--error__content-container__content__text {
     text-align: start;
     color: var(--color-error);
 }
