--- a/src/components/Text/Title/Title.css
+++ b/src/components/Text/Title/Title.css
@@ -1,7 +1,7 @@
 /* Title component styles */
-.title {
-    font-size: var(--title--font-size);
-    font-weight: var(--title--font-weight);
+.text--title {
+    font-size: var(--text--title--font-size);
+    font-weight: var(--text--title--font-weight);
+    letter-spacing: var(--text--title--letter-spacing);
     color: var(--text--color);
-    letter-spacing: var(--letter-spacing);
 }
